test/mutation_analysis/s0551_student_attendance_record_i/hafis/ablation_o3_full/mutants/2/result.txt
./test/mutation_analysis/s0551_student_attendance_record_i/hafis/ablation_o3_full/mutants/2/Solution.java:14: error: unreachable statement
        while (false) {
                      ^
1 error
